--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Сессия под ключ для студентов &quot;Роспросвет&quot;. Помощь, ответы на тесты. Вход в личный кабинет rosprosvet.ru">
 <meta property="og:description" content="Помощь студентам дистанционного обучения &quot;Роспросвет&quot;. Решение промежуточных и итоговых тестов. Сдача вступительных и итоговых экзаменов. Ответы на тесты, написание дипломных работ, выполнение дипломных презентаций и докладов ВКР. Решение задач и выполнение контрольных работ. Сессия под ключ. Вход в личный кабинет rosprosvet.ru">
-<meta property="og:url" content="https://rosprosvet-student.ru/">
+<meta property="og:url" content="http://rosprosvet-student.ru/">
 <meta property="og:site_name" content="Сессия под ключ для студентов Роспросвет">
 <meta property="og:image" content="http://rosprosvet-student.ru/dummy-1.jpg">
 <meta property="og:image:secure_url" content="http://rosprosvet-student.ru/dummy-1.jpg">
