--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <meta name="theme-color" content="#ffffff">
 <meta name="description" content="Помощь студентам дистанционного обучения &quot;Роспросвет&quot;. Решение промежуточных и итоговых тестов. Сдача вступительных и итоговых экзаменов. Ответы на тесты. Решение задач и выполнение контрольных работ. Сессия под ключ. Вход в личный кабинет rosprosvet.ru">
 <link rel="canonical" href="http://rosprosvet-student.ru">
+<meta name="yandex-verification" content="fa84a2fb2fdbb6d5" />
 <meta property="og:locale" content="ru_RU">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Сессия под ключ для студентов &quot;Роспросвет&quot;. Помощь, ответы на тесты. Вход в личный кабинет rosprosvet.ru">
