Добавил ссылку на "Помощь студентам" в шапке

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-	<a href="#home" class="w3-bar-item w3-button"><b>ПОМОЩЬ</b> студентам</a>
+	<a href="" class="w3-bar-item w3-button"><b>ПОМОЩЬ</b> студентам</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button"><i class="fa fa-shopping-basket w3-text-blue"></i> УСЛУГИ</a>
