--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-	<a href="" class="w3-bar-item w3-button"><b>ПОМОЩЬ</b> студентам</a>
+	<a href="#home" class="w3-bar-item w3-button w3-hide-small"><b>ПОМОЩЬ</b> студентам</a>
+	<a href="#home" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium"><b>ПОМОЩЬ</b> студентам</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button"><i class="fa fa-shopping-basket w3-text-blue"></i> УСЛУГИ</a>
@@ -77,8 +78,8 @@ body, html {
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
-      <i class="fa fa-bars"></i>
+    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-left w3-hide-large w3-hide-medium" onclick="w3_open()">
+      <i class="fa fa-bars"></i> меню
     </a>
   </div>
 </div>
