add link rel="icon" href="/assets/favicon.ico" type="image/vnd.microsoft.icon"

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Помощь для студентов "Роспросвет". Ответы на тесты, экзамены. Вход в личный кабинет rosprosvet.ru</title>
+<link rel="icon" href="/assets/favicon.ico" type="image/vnd.microsoft.icon" />
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
