--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body, html {
 
     <p class="w3-center w3-large"><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right w3-text-blue"> </i> <a class="text-info" style="text-decoration: none;" href="mailto:agr200815@gmail.com"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;agr200815@gmail.com</b></a></p>
 	
-    <p class="w3-center w3-large"><i class="fa fa-vk fa-fw w3-xxlarge w3-margin-right w3-text-blue" ></i> <a class="text-info" style="text-decoration: none;" href="https://vk.com/student_aids"><b>https://vk.com/student_aids</b></a></p>
+    <p class="w3-center w3-large"><i class="fa fa-vk fa-fw w3-xxlarge w3-margin-right w3-text-blue" ></i> <a class="text-info" style="text-decoration: none;" href="https://vk.com/rosprosvet_student"><b>https://vk.com/rosprosvet_student</b></a></p>
 
 </div>
 
