--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body, html {
    <p class="w3-center w3-large">  В сообщении задайте свой вопрос и укажите дисциплину, сроки сдачи тестов.</p>	
   <p class="w3-center w3-large ">Выберите один из предпочитаемых Вами способов связи: </p>
 
-    <p class="w3-center w3-large"> <a class="text-info" style="text-decoration: none;" href="mailto:agr200815@gmail.com"><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right w3-text-blue"> </i><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;agr200815@gmail.com</b></a></p>
+    <p class="w3-center w3-large"> <a class="text-info" style="text-decoration: none;" href="mailto:agr200815@gmail.com"><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right w3-text-blue"> </i><b>agr200815@gmail.com</b></a></p>
 	
     <p class="w3-center w3-large"> <a class="text-info" style="text-decoration: none;" href="https://vk.com/rosprosvet_student"><i class="fa fa-vk fa-fw w3-xxlarge w3-margin-right w3-text-blue" ></i><b>https://vk.com/rosprosvet_student</b></a></p>
 
